# palmos

./: .gitignore  README.md  SPEC.md  SPEC2.md
apps/web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
apps/web/e2e/: lifecycle.spec.ts  perf.spec.ts  shaders.spec.ts  smoke.spec.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/audio/: recipes.ts
apps/web/src/components/: AppShell.tsx  CanvasArea.tsx  ColorPicker.tsx  EffectParamField.tsx  EffectsTab.tsx  ElementsFlyout.tsx  FillControl.tsx  Inspector.tsx  LayersPanel.tsx  MotionTab.tsx  ProjectsMenu.tsx  ShaderProps.tsx  TopBar.tsx
apps/web/src/design/: fonts.ts  generators.ts  geometry.test.ts  geometry.ts  palettes.test.ts  palettes.ts  styles.ts
apps/web/src/editor/: EditorCanvas.tsx  Toolbar.tsx  stageRegistry.ts  useBakeHandler.ts  useEffectPreviews.ts  useHtmlImage.ts  useShaderPreviews.ts  useShortcuts.ts
apps/web/src/effects/: EffectRenderer.ts  GpuContext.ts  all.ts  bake.ts  glsl.ts  gpu.ts  post.ts  registry.test.ts  registry.ts  shaderCompile.ts  (+2 more)
services/reconstruct/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/reconstruct/app/: config.py  enrich.py  jobs.py  main.py  schemas.py
services/reconstruct/app/pipeline/: assemble.py  ocr.py  palette.py  preprocess.py  segment.py  vectorize.py  vtracer_worker.py
services/reconstruct/tests/: conftest.py  test_api.py  test_enrich.py  test_hardening.py  test_pipeline.py
supabase/migrations/: 20260706000001_projects.sql  20260717000001_projects_hardening.sql
(+38 files in other folders)
